Add backend and frontend for blog service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.show-sql=false
 #spring.data.elasticsearch.properties.path.home=target/elastic
 # setting connection timeout
 #spring.data.elasticsearch.properties.transport.tcp.connect_timeout=120s
+
+file.server.url = http://localhost:8081/upload
