--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,15 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML5
 
-spring.datasource.url = jdbc:mysql://localhost:3306/blog?useSSL=false&createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/spring_blog?useSSL=false&createDatabaseIfNotExist=true
 spring.datasource.username =
 spring.datasource.password =
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 #spring.data.elasticsearch.cluster-nodes=localhost:9300
 #spring.data.elasticsearch.cluster-name=myin-cluster
